# gv

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.beads/: issues.jsonl
cmd/gv/: main.go
docs/plans/: 2025-01-03-gv-design.md
docs/scripts/: record-readme-demos.sh
internal/git/: commits.go  diff.go  worktree.go  worktree_test.go
internal/syntax/: highlight.go
internal/ui/: model.go  model_test.go  styles.go
src/: app.rs  main.rs  syntax.rs
src/git/: commits.rs  diff.rs  mod.rs  worktree.rs
src/ui/: diff_view.rs  file_tree.rs  footer.rs  header.rs  mod.rs  popup.rs  sidebar.rs  styles.rs
