[package]
name = "gv"
version = "0.1.0"
edition = "2024"
description = "Terminal UI diff viewer for git worktrees"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Git operations
git2 = "0.20"

# Syntax highlighting
syntect = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Async for loading
tokio = { version = "1", features = ["rt", "sync", "time"] }

# Utilities
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
